// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRating matches snapshots: rating=0 1`] = `
<div
  className="my-rating"
>
  <i
    className=" circle icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating matches snapshots: rating=1 1`] = `
<div
  className="my-rating"
>
  <i
    className=" circle icon thin"
    onClick={[Function]}
  />
  <i
    className=" star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating matches snapshots: rating=5 1`] = `
<div
  className="my-rating"
>
  <i
    className=" circle icon thin"
    onClick={[Function]}
  />
  <i
    className=" star icon"
    onClick={[Function]}
  />
  <i
    className=" star icon"
    onClick={[Function]}
  />
  <i
    className=" star icon"
    onClick={[Function]}
  />
  <i
    className=" star icon"
    onClick={[Function]}
  />
  <i
    className=" star icon"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating matches snapshots: rating=null 1`] = `
<div
  className="my-rating"
>
  <i
    className=" circle icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
  <i
    className=" empty star icon"
    onClick={[Function]}
  />
</div>
`;

exports[`Rating matches snapshots: rating=0 1`] = `
<div
  className="compact my-rating"
/>
`;

exports[`Rating matches snapshots: rating=1 1`] = `
<div
  className="compact my-rating"
>
  <i
    className="tiny icon star"
  />
</div>
`;

exports[`Rating matches snapshots: rating=5 1`] = `
<div
  className="compact my-rating"
>
  <i
    className="tiny icon star"
  />
  <i
    className="tiny icon star"
  />
  <i
    className="tiny icon star"
  />
  <i
    className="tiny icon star"
  />
  <i
    className="tiny icon star"
  />
</div>
`;

exports[`Rating matches snapshots: rating=null 1`] = `
<div
  className="compact my-rating"
/>
`;
